# Manteia

./: .gitignore  LICENSE  README.md  SaveCog仕様.txt  main.py  make_db.py  pyproject.toml  requirements.txt  test.py
cogs/: FileHandlerCog.py  HelpCog.py  SaveCog.py  cogs.py  help.py  save.py  upload.py
lib/: embed.py  rename.py
src/: main.py
src/cogs/: HelpCog.py
