[project]
name = "manteia"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jijinbei", email = "hikoharu14142@outlook.jp" }
]
dependencies = [
    "discord>=2.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "reportlab>=4.2.5",
    "pillow>=11.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/manteia"]

[tool.rye.scripts]
manteia = { cmd = "python ./src/main.py" }
